@@ -53,8 +53,8 @@
                      *active-restarts* nil
                      *condition-restarts* nil
                      *command-index* 0
-                     *home-package* nil
-                     *dribble-stream* nil)
+                     *home-package* nil)
+               (dribble-reset)
                (setq *driver* old-driver)
                (when init-function (funcall init-function))
                (funcall *driver*))))
